# data-etl

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  make  package.json  pyproject.toml
data_elt_pipelines/: Dockerfile  calc_time.py  cloudwatch-agent-config.json  pyproject.toml
data_elt_pipelines/glue_jobs/: data_load.py  glue_utils.py  schema_definition.py  schema_transformation.py
data_elt_pipelines/glue_services/: crawler.py  glue.py  job.py  params.py  trigger.py  workflow.py
data_elt_pipelines/handlers/: archive_utility_handler.py  backfill_file_meta_handler.py  csv_chunking_handler.py  data_bulk_load_handler.py  ecs_task_handler.py  ecs_wrapper.py  fetcher_ftp_download_handler.py  fixed_width_text_handler.py  glue_services_handler.py  ingestion_services_handler.py  schema_transformation_handler.py  update_metadata_timestamp_handler.py
data_elt_pipelines/raw_parsers/: fixed_width_txt.py
data_elt_pipelines/schema_transformation/: cdm_mapper.py  cdm_mapping_rule.py
data_elt_pipelines/shared/: cdm_company.py  constants.py  content_type.py  dynamodb.py  ecs_service.py  jurisdiction.py  logging.py  metadata.py  param_models.py  secret.py  tags.py  utils.py
data_elt_pipelines/source_ingestion/: ftp.py
data_elt_pipelines/tests/: run_lambda.py  test_cdm_company.py  test_cdm_mapper.py  test_ecs_service.py  test_fetcher_ftp_download_handler.py  test_ftp.py  test_glue_params.py  test_glue_utils.py  test_iceburg_schema_definition.py  test_mapping_rule.py  test_param_models.py  test_parser_fixed_width_txt.py  test_schema_transformation_handler.py  (+3 more)
(+93 files in other folders)
